02_Kubernetes_Microservice_Deployment/yaml-manifests/streamingApp-deployment.yaml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: mahdimabrouk/fastapi-streamingapp:latest
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: fastapi
  type: ClusterIP
